# x-series-data-cli-gt

./: .gitignore  CLAUDE.md  README.md  SPEC.md  data-instructions.md  pyproject.toml  task.md
.claude/: creating-variants.txt  updating-variants.txt
openapi/: legacy-api-v0-9.yml  legacy-api-v2-0-beta.yml  legacy-api-v2-0.yml  legacy-api-v2-1.yml  legacy-api-v3-0-beta.yml  legacy-api-v3-0.yml
tests/: test_clone.py  test_generators.py
xseries_demo/: __init__.py  __main__.py  cli.py  clone.py  output.py
xseries_demo/api/: __init__.py  client.py  customers.py  products.py
xseries_demo/data/: apparel.json  beauty.json  electronics.json  home.json  liquor.json  variants.json
xseries_demo/generators/: __init__.py  customers.py  products.py  sales.py  variants.py
