[project]
name = "xseries-demo"
version = "1.2.0"
description = "CLI tool to generate demo data or clone data between X-Series retail accounts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=22.0.0",
    "faker-commerce>=1.0.3",
    "httpx>=0.26.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.scripts]
xseries-demo = "xseries_demo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
